--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,7 @@
     <link
     rel="stylesheet"
     type="text/css"
-    href="//db.onlinewebfonts.com/c/157c6cc36dd65b1b2adc9e7f3329c761?family=Amazon+Ember"
-    />
+    href="//db.onlinewebfonts.com/c/157c6cc36dd65b1b2adc9e7f3329c761?family=Amazon+Ember"/>
     <title>Shop-IT</title>
   </head>
   <body>
